# otus-validation

./: .env.example  .gitignore  README.md  demo.sh  docker-compose.yml  pyproject.toml  requirements.txt
infra/mlflow/: Dockerfile  requirements.txt
notebooks/: work.ipynb
src/: __init__.py  ab_test.py  common.py  examples.py  train.py
